@@ -1,6 +1,9 @@
  Release Notes for the evrmaDriver package
 -------------------------------------------
 
+evrmaDriver-R1-0-p4: 2015-11-18 S. Gruden
+	* Enabled DBG_MEASURE_TIME_FROM_IRQ_TO_USER.
+
 evrmaDriver-R1-0-p3: 2015-11-13 S. Gruden
 	* a bug fix (output allocating was not correctly protected)
 	* code cleanup
